--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "c:\\Users\\usu15v\\OneDrive - Consejería de Educación\\Clase\\Marcas\\EntregableBoostrap\\paginaInicio.html"
+    "livePreview.defaultPreviewPath": "c:\\Users\\usu15v\\OneDrive - Consejería de Educación\\Clase\\Marcas\\EntregableBoostrap\\Inicio.html"
 }
